--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url('img/eclipse-g764aabed5_1920.jpg');
     background-position: center;
+    background-size: cover;
 }
 
 footer {
@@ -22,7 +23,7 @@ footer {
     position: absolute;
     width: 450px;
     height: 600px;
-    background-color: rgb(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 10px;
 }
 
@@ -116,12 +117,24 @@ table {
 }
 
 .game-over {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    width: 700px;
+    height: 700px;
     z-index: 2;
     animation: zoom 225ms ease-in-out;
+    background-color: rgb(8, 8, 8, 0.5);
+    border-radius: 10px;
+}
+
+.game-over-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
 
 @keyframes zoomIN {
@@ -145,7 +158,6 @@ table {
     color: white;
     font-size: 40px;
     cursor: pointer;
-    position: absolute;
     bottom: 60px;
 }
 
@@ -153,12 +165,44 @@ table {
     background-color: rgb(59, 40, 168);
 }
 
-@media screen and (max-width:64em) {}
+@media screen and (max-width:64em) {
+    .game-over {
+        width: 500px;
+        height: 500px;
+    }
+
+    .game-over-img {
+        width: 180px;
+        height: 180px;
+        margin-bottom: 30px;
+    }
+
+    .restart-btn {
+        width: 300px;
+        height: 100px;
+}
+}
 
 @media screen and (max-width:48em) {
     .horizontal-line {
         display: none;
-      }
+    }
+
+    .game-over {
+        width: 350px;
+        height: 350px;
+    }
+
+    .game-over-img {
+        width: 120px;
+        height: 120px;
+        margin-bottom: 15px;
+    }
+
+    .restart-btn {
+        width: 250px;
+        height: 70px;
+}
 }
 
 @media screen and (max-width:35.5em) {
@@ -194,7 +238,21 @@ table {
     }
 
     .horizontal-line {
-      display: none;
+        display: none;
     }
 
+    .game-over {
+        width: 250px;
+        height: 250px;
+    }
+
+    .game-over-img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .restart-btn {
+        width: 200px;
+        height: 50px;
+}
 }
